--- a/code/home.html
+++ b/code/home.html
@@ -12,7 +12,7 @@
 <body class="abc">
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../img/logo.png" height="80px" width="180px"></a>
+      <a class="navbar-brand" href="#"><img src="../img/logo.png" height="60px" width="180px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -88,7 +88,7 @@
       </figure>
       <figure>
         <img class="imgs" src="../img/showcase-img-2.jpg" height="180px" width="180px">
-        <figcaption>Pillowcase</figcaption>
+         <figcaption>Pillowcase</figcaption>
       </figure>
     </div>
   </section>
@@ -97,7 +97,7 @@
     <button type="button" class="btn2">Popular</button>
     <button type="button" class="btn2">New Added</button>
   </section>
-  <section class="pro1">
+  <!-- <section class="pro1">
     <div class="products">
       <img src="../img/product-1-2.jpg" id="img2" height="250px" width="250px">
       <img src="../img/product-1-1.jpg" id="img1" height="250px" width="250px">
@@ -113,6 +113,61 @@
     <div class="products3">
       <img src="../img/product-4-2.jpg" id="img7" height="250px" width="250px">
       <img src="../img/product-4-1.jpg" id="img8" height="250px" width="250px">
+    </div>
+    <div class="products3">
+      <img src="../img/product-5-2.jpg" id="img9" height="250px" width="250px">
+      <img src="../img/product-5-1.jpg" id="img10" height="250px" width="250px">
+    </div>
+    <div class="products3">
+      <img src="../img/product-6-2.jpg" id="img11" height="250px" width="250px">
+      <img src="../img/product-6-1.jpg" id="img12" height="250px" width="250px">
+    </div>
+    <div class="products3">
+      <img src="../img/product-7-2.jpg" id="img13" height="250px" width="250px">
+      <img src="../img/product-7-1.jpg" id="img14" height="250px" width="250px">
+    </div>
+    <div class="products3">
+      <img src="../img/product-8-2.jpg" id="img15" height="250px" width="250px">
+      <img src="../img/product-8-1.jpg" id="img16" height="250px" width="250px">
+    </div>
+  </section> -->
+  <section class="pro1">
+    <div class="product1">
+      <img src="../img/product-1-2.jpg" id="img2" height="250px" width="250px">
+      <img src="../img/product-1-1.jpg" id="img1" height="250px" width="250px">
+    </div>
+    <div class="product2">
+      <img src="../img/product-2-2.jpg" id="img3" height="250px" width="250px">
+      <img src="../img/product-2-1.jpg" id="img4" height="250px" width="250px">
+    </div>
+    <div class="product3">
+      <img src="../img/product-3-2.jpg" id="img5" height="250px" width="250px">
+      <img src="../img/product-3-1.jpg" id="img6" height="250px" width="250px">
+    </div>
+    <div class="product4">
+      <img src="../img/product-4-2.jpg" id="img7" height="250px" width="250px">
+      <img src="../img/product-4-1.jpg" id="img8" height="250px" width="250px">
+    </div>
+    <div class="product5">
+      <img src="../img/product-5-2.jpg" id="img9" height="250px" width="250px">
+      <img src="../img/product-5-1.jpg" id="img10" height="250px" width="250px">
+    </div>
+    <div class="product6">
+      <img src="../img/product-6-2.jpg" id="img11" height="250px" width="250px">
+      <img src="../img/product-6-1.jpg" id="img12" height="250px" width="250px">
+    </div>
+    <div class="product7">
+      <img src="../img/product-7-2.jpg" id="img13" height="250px" width="250px">
+      <img src="../img/product-7-1.jpg" id="img14" height="250px" width="250px">
+    </div>
+    <div class="product8">
+      <img src="../img/product-8-2.jpg" id="img15" height="250px" width="250px">
+      <img src="../img/product-8-1.jpg" id="img16" height="250px" width="250px">
+     <div>
+      <p class="procap8">Clothing</p>
+      <h4 class="procap82">Coloful Pattern Shirts</h4>
+     
+      </div>
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
