--- a/code/loginpage.html
+++ b/code/loginpage.html
@@ -74,7 +74,57 @@
      placeholder="Your password"><br><br>
      <input class="account3" type="password" name="pwd"
      placeholder="Confirm password"><br><br>
-     <button class="logbtn">Submit&Register</button>
+     <button class="logbtn">Submit & Register</button>
+  </section>
+  <section>
+    <nav class="footer navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand"><img class="emaimg" src="../img/icon-email.svg" height="33px" width="33px"></a>
+        <p class="foot1">Sign in to Newsletter</p>
+        <span class="foot2">...and receive $25 coupon for first shopping.</span>
+        <form class="d-flex" role="search">
+          <input class="emailbox form-control" type="search" placeholder="Enter Your Email" aria-label="Search">
+          <button class="subbox btn" type="submit">Subscribe</button>
+        </form>
+      </div>
+    </nav>
+  </section>
+  <section class="footerpart">
+    <img class="footimg" src="../img/logo.png" height="60px" width="180px">
+    <p class="foot6">Contact</p><br>
+    <p class="foot5"><span class="foot4">Address: </span>13 Tlemcen Road, Street 32, Beb-Wahren<br>
+      <span class="foot4">Phone:</span> +012222 365/(+91)01 2345 6789<br>
+      <span class="foot4">Hours:</span> 10:00-18:00, Mon-Sat</p>
+      <p class="foot7">Follow Me</p>
+      <div class="footicons">
+        <img src="../img/icon-facebook.svg" height="20px" width="20px">
+        <img src="../img/icon-twitter.svg" height="20px" width="20px">
+        <img src="../img/icon-instagram.svg" height="20px" width="20px">
+        <img src="../img/icon-pinterest.svg" height="20px" width="20px">
+        <img src="../img/icon-youtube.svg" height="20px" width="20px">
+      </div>
+      <div class="footset">
+        <h5>Address</h5>
+        <p class="footset1">About Us</p>
+        <p>Delivery Information</p>
+        <p>Privacy Policy</p>
+        <p>Terms & Conditions</p>
+        <p>Contact Us</p>
+        <p>Support Centre</p>
+      </div>
+      <div class="footset2">
+        <h5>My Account</h5>
+        <p class="footset1">Sign in</p>
+        <p>View Cart</p>
+        <p>My Wishlist</p>
+        <p>Track My Order</p>
+        <p>Help</p>
+        <p>Order</p>
+      </div>
+      <div class="footpay">
+        <h5>Secured Payed Gateways</h5>
+        <img src="../img/payment-method.png">
+      </div>
   </section>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
