--- a/code/myaccount.html
+++ b/code/myaccount.html
@@ -26,7 +26,7 @@
         </section>
         <section class="dashboard">
             <h6>Hello Rosie</h6>
-            <p>From your account dasgboard. You can easily check & view your recent order, manage your shipping and billing addressed and edit your password and account details. </p>
+            <p style="color: rgb(73, 91, 73);">From your account dasgboard. You can easily check & view your recent order, manage your shipping and billing addressed and edit your password and account details. </p>
         </section>
       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
