--- a/code/login.html
+++ b/code/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="../code/external.css" rel="stylesheet">
+    <link href="../code/login.css" rel="stylesheet">
 </head>
 <body class="abc">
   <nav class="navbar navbar-expand-lg">
@@ -18,19 +18,19 @@
       <div class="tags collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active p-4" aria-current="page" href="#">Home</a>
+            <a class="nav-link  p-4" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active p-4" aria-current="page" href="#">Shop</a>
+            <a class="nav-link  p-4" href="./shop.html">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active p-4" aria-current="page" href="#">My Account</a>
+            <a class="nav-link  p-4" href="./myaccount.html">My Account</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active p-4" aria-current="page" href="#">Compare</a>
+            <a class="nav-link  p-4" href="./compare.html">Compare</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active p-4" aria-current="page" href="#">Login</a>
+            <a class="nav-link active p-4" aria-current="page" href="./loginpage.html">Login</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
