--- a/code/login.html
+++ b/code/login.html
@@ -76,6 +76,7 @@
      placeholder="Confirm password"><br><br>
      <button class="logbtn">Submit & Register</button>
   </section>
+  <!-- Footers -->
   <section>
     <nav class="footer navbar">
       <div class="container-fluid">
