--- a/code/index.html
+++ b/code/index.html
@@ -7,12 +7,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="../code/index.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <!-- headers -->
 <body class="abc">
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../img/logo.png" height="60px" width="180px"></a>
+      <a class="navbar-brand" href="#"><img src="../img/logo.png" height="80px" width="180px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,19 +21,19 @@
       <div class="tags collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active p-4" aria-current="page" href="./index.html">Home</a>
+            <a class="nav-link  p-4" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-4" href="./shop.html">Shop</a>
+            <a class="nav-link  p-4" href="./shop.html">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-4" href="./myaccount.html">My Account</a>
+            <a class="nav-link  p-4" href="./myaccount.html">My Account</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-4" href="./compare.html">Compare</a>
+            <a class="nav-link  p-4" href="./compare.html">Compare</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-4" href="login.html">Login</a>
+            <a class="nav-link active p-4" aria-current="page" href="./loginpage.html">Login</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -101,11 +102,19 @@
   </section>
 
   <!-- Cards -->
+
   <section class="pro">
     <div class="card">
-      <div class="product">
-        <img src="../img/product-1-1.jpg" id="img1" width="300px">
-        <img src="../img/product-1-2.jpg" id="img2" width="300px" >
+      <div class="image-container">
+        <img src="../img/product-1-1.jpg" id="img1">
+        <div class="back">
+          <img src="../img/product-1-2.jpg" id="img2" >
+          <div class="back-icons">
+            <span><i class="bi bi-eye"></i></span>
+            <span><i class="bi bi-heart"></i></span>
+            <span><i class="bi bi-shuffle"></i></span>
+          </div>
+      </div>
       </div>
       <div class="card-details">
         <p class="procap8">Clothing</p>
@@ -115,6 +124,140 @@
       </div>
     </div>
     <div class="card">
+      <div class="image-container">
+        <img src="../img/product-2-1.jpg" id="img1">
+        <div class="back">
+          <img src="../img/product-2-2.jpg" id="img2" >
+          <div class="back-icons">
+            <span><i class="bi bi-eye"></i></span>
+            <span><i class="bi bi-heart"></i></span>
+            <span><i class="bi bi-shuffle"></i></span>
+          </div>
+      </div>
+      </div>
+      <div class="card-details">
+        <p class="procap8">Clothing</p>
+        <h5 class="procap82">Coloful Pattern Shirts</h5>
+        <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+        <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image-container">
+        <img src="../img/product-3-1.jpg" id="img1">
+        <div class="back">
+          <img src="../img/product-3-2.jpg" id="img2" >
+          <div class="back-icons">
+            <span><i class="bi bi-eye"></i></span>
+            <span><i class="bi bi-heart"></i></span>
+            <span><i class="bi bi-shuffle"></i></span>
+          </div>
+      </div>
+      </div>
+      <div class="card-details">
+        <p class="procap8">Clothing</p>
+        <h5 class="procap82">Coloful Pattern Shirts</h5>
+        <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+        <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image-container">
+        <img src="../img/product-4-1.jpg" id="img1">
+        <div class="back">
+          <img src="../img/product-4-2.jpg" id="img2" >
+          <div class="back-icons">
+            <span><i class="bi bi-eye"></i></span>
+            <span><i class="bi bi-heart"></i></span>
+            <span><i class="bi bi-shuffle"></i></span>
+          </div>
+      </div>
+      </div>
+      <div class="card-details">
+        <p class="procap8">Clothing</p>
+        <h5 class="procap82">Coloful Pattern Shirts</h5>
+        <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+        <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image-container">
+        <img src="../img/product-5-1.jpg" id="img1">
+        <div class="back">
+          <img src="../img/product-5-2.jpg" id="img2" >
+          <div class="back-icons">
+            <span><i class="bi bi-eye"></i></span>
+            <span><i class="bi bi-heart"></i></span>
+            <span><i class="bi bi-shuffle"></i></span>
+          </div>
+      </div>
+      </div>
+      <div class="card-details">
+        <p class="procap8">Clothing</p>
+        <h5 class="procap82">Coloful Pattern Shirts</h5>
+        <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+        <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image-container">
+        <img src="../img/product-6-1.jpg" id="img1">
+        <div class="back">
+          <img src="../img/product-6-2.jpg" id="img2" >
+          <div class="back-icons">
+            <span><i class="bi bi-eye"></i></span>
+            <span><i class="bi bi-heart"></i></span>
+            <span><i class="bi bi-shuffle"></i></span>
+          </div>
+      </div>
+      </div>
+      <div class="card-details">
+        <p class="procap8">Clothing</p>
+        <h5 class="procap82">Coloful Pattern Shirts</h5>
+        <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+        <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image-container">
+        <img src="../img/product-7-1.jpg" id="img1">
+        <div class="back">
+          <img src="../img/product-7-2.jpg" id="img2" >
+          <div class="back-icons">
+            <span><i class="bi bi-eye"></i></span>
+            <span><i class="bi bi-heart"></i></span>
+            <span><i class="bi bi-shuffle"></i></span>
+          </div>
+      </div>
+      </div>
+      <div class="card-details">
+        <p class="procap8">Clothing</p>
+        <h5 class="procap82">Coloful Pattern Shirts</h5>
+        <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+        <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="image-container">
+        <img src="../img/product-8-1.jpg" id="img1">
+        <div class="back">
+          <img src="../img/product-8-2.jpg" id="img2" >
+          <div class="back-icons">
+            <span><i class="bi bi-eye"></i></span>
+            <span><i class="bi bi-heart"></i></span>
+            <span><i class="bi bi-shuffle"></i></span>
+          </div>
+      </div>
+      </div>
+      <div class="card-details">
+        <p class="procap8">Clothing</p>
+        <h5 class="procap82">Coloful Pattern Shirts</h5>
+        <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+        <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+      </div>
+    </div>
+
+    <!-- <div class="card">
     <div class="product">
       <img src="../img/product-2-1.jpg" id="img1" width="300px">
       <img src="../img/product-2-2.jpg" id="img2" width="300px">
@@ -198,7 +341,7 @@
         <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
         <p class="price">$238.85<span class="offprz"> $245.8</span></p>
       </div>
-    </div>
+    </div> -->
   </section>
 
   <!-- Banner Section-->
@@ -212,19 +355,19 @@
       <p style="color: rgb(15, 74, 74);">Hurry Up! Offer Ends In:</p>
       <div class="timer">
         <div>
-      <button class="btn">02</button><span style="font-weight: bold;">:</span>
+      <button class="btn3">02</button><span style="font-weight: bold;">:</span>
       <div class="timers1" >Days</div>
       </div>
       <div>
-      <button class="btn">22</button><span style="font-weight: bold;">:</span>
+      <button class="btn3">22</button><span style="font-weight: bold;">:</span>
       <div class="timers2">Hours</div>
       </div>
       <div>
-      <button class="btn">57</button><span style="font-weight: bold;">:</span>
+      <button class="btn3">57</button><span style="font-weight: bold;">:</span>
       <div class="timers3">Mins</div>
       </div>
       <div>
-      <button class="btn">28</button>
+      <button class="btn3">28</button>
       <div class="timers4">Sec</div>
       </div>
     </div> 
@@ -240,19 +383,19 @@
       <p style="color: rgb(15, 74, 74);">Hurry Up! Offer Ends In:</p>
       <div class="timer">
         <div>
-      <button class="btn">02</button><span style="font-weight: bold;">:</span>
+      <button class="btn3">02</button><span style="font-weight: bold;">:</span>
       <div class="timers1" >Days</div>
       </div>
       <div>
-      <button class="btn">22</button><span style="font-weight: bold;">:</span>
+      <button class="btn3">22</button><span style="font-weight: bold;">:</span>
       <div class="timers2">Hours</div>
       </div>
       <div>
-      <button class="btn">57</button><span style="font-weight: bold;">:</span>
+      <button class="btn3">57</button><span style="font-weight: bold;">:</span>
       <div class="timers3">Mins</div>
       </div>
       <div>
-      <button class="btn">28</button>
+      <button class="btn3">28</button>
       <div class="timers4">Sec</div>
       </div>
     </div> 
@@ -260,10 +403,12 @@
     <button class="btn1">Shop Now</button>
   </div>
 </section>
-  <!-- New Arrivals -->
+
+  <!-- New arrivals -->
+
+  <h4 class="new-arrive"><span style="color: teal;">New</span> Arrivals</h4>
+  <section class="new-arrivals">
    <section class="pro">
-    <h4><span style="color: teal;">New</span> Arrivals</h4>
-    <div class="new-arrivals">
     <div class="card">
       <div class="product">
         <img src="../img/product-1-1.jpg" id="img1" width="300px">
@@ -312,10 +457,72 @@
       <p class="price">$238.85<span class="offprz"> $245.8</span></p>
     </div>
   </div>
+  </section>
    </section>
 
-  <!-- 4 column design -->
-
+   <!-- 4 column design -->
+ <section class="grid">
+<div>
+  <div><img src="../img/showcase-img-1.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p> Floral Print Casual Cotton Dre...</p>
+  <h6 style="color:teal">$238.85 <del style="color: rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-4.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p>Fish Print Patched T-shirts</p>
+  <h6 style="color:teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-7.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p>Geometric Printed Long Sleev...</p>
+  <h6 style="color:teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-7.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p> Floral Pint Casual Cotton</p>
+  <h6 style="color:teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-2.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p>Ruffled Solid Long Sleeve Blou...</p>
+  <h6 style="color:teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-5.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p>Fintage Floral Print Dress</p>
+  <h6 style="color:teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-8.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p>Print Patchwork Max Dress</p>
+  <h6 style="color: teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-8.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p>>Ruffled Solid Long Sleeve</p>
+  <h6 style="color: teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-3.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p>Multi-Color Print V-neck T-shirt</p>
+  <h6 style="color: teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-6.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p> Multi-Color Stripe Circle T-shirt</p>
+  <h6 style="color: teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-9.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p>daisy Floral Print straps  Jump...</p>
+  <h6 style="color: teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+<div>
+  <div><img src="../img/showcase-img-9.jpg" alt="" height="100px" width="100px"></div>
+  <div> <p>Multi-Color Print V-neck</p>
+  <h6 style="color: teal">$238.85 <del style="color:rgb(131, 128, 128);">$245.0</del></h6></div>
+</div>
+  </section>
   <!-- Footer -->
 
   
