--- a/code/shop.html
+++ b/code/shop.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="../code/shop.css" rel="stylesheet">
 </head>
+<!-- Headers -->
   <body class="abc">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
@@ -59,6 +60,209 @@
           <span class="login navbar-brand mb-0 h1">Home > Shop</span>
         </div>
         </nav>
+
+        <!-- Main Section -->
+         <!-- Cards -->
+         <section class="pro">
+          <div class="card">
+            <div class="product">
+              <img src="../img/product-1-1.jpg" id="img1" width="300px">
+              <img src="../img/product-1-2.jpg" id="img2" width="300px" >
+            </div>
+            <div class="card-details">
+              <p class="procap8">Clothing</p>
+              <h5 class="procap82">Coloful Pattern Shirts</h5>
+              <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+              <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+            </div>
+          </div>
+          <div class="card">
+          <div class="product">
+            <img src="../img/product-2-1.jpg" id="img1" width="300px">
+            <img src="../img/product-2-2.jpg" id="img2" width="300px">
+          </div>
+            <div class="card-details">
+            <p class="procap8">Clothing</p>
+            <h5 class="procap82">Coloful Pattern Shirts</h5>
+            <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+            <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="product">
+            <img src="../img/product-3-1.jpg" id="img1" width="300px">
+            <img src="../img/product-3-2.jpg" id="img2" width="300px">
+          </div>
+          <div class="card-details">
+            <p class="procap8">Clothing</p>
+            <h5 class="procap82">Coloful Pattern Shirts</h5>
+            <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+            <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+          </div>
+        </div>
+          <div class="card">
+          <div class="product">
+            <img src="../img/product-4-1.jpg" id="img1" width="300px">
+            <img src="../img/product-4-2.jpg" id="img2" width="300px">
+          </div>
+          <div class="card-details">
+            <p class="procap8">Clothing</p>
+            <h5 class="procap82">Coloful Pattern Shirts</h5>
+            <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+            <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+          </div>
+        </div>
+          <div class="card">
+          <div class="product">
+            <img src="../img/product-5-1.jpg" id="img1" width="300px">
+            <img src="../img/product-5-2.jpg" id="img2" width="300px">
+          </div>
+          <div class="card-details">
+            <p class="procap8">Clothing</p>
+            <h5 class="procap82">Coloful Pattern Shirts</h5>
+            <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+            <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+          </div>
+        </div>
+          <div class="card">
+          <div class="product">
+            <img src="../img/product-6-1.jpg" id="img1" width="300px">
+            <img src="../img/product-6-2.jpg" id="img2" width="300px">
+          </div>
+          <div class="card-details">
+            <p class="procap8">Clothing</p>
+            <h5 class="procap82">Coloful Pattern Shirts</h5>
+            <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+            <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+          </div>
+        </div>
+          <div class="card">
+          <div class="product">
+            <img src="../img/product-7-1.jpg" id="img1" width="300px">
+            <img src="../img/product-7-2.jpg" id="img2" width="300px">
+          </div>
+          <div class="card-details">
+            <p class="procap8">Clothing</p>
+            <h5 class="procap82">Coloful Pattern Shirts</h5>
+            <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+            <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+          </div>
+        </div>
+      
+            <div class="card">
+          <div class="product">
+            <img src="../img/product-8-1.jpg" id="img1" width="300px">
+            <img src="../img/product-8-2.jpg" id="img2" width="300px">
+            </div>
+            <div class="card-details">
+              <p class="procap8">Clothing</p>
+              <h5 class="procap82">Coloful Pattern Shirts</h5>
+              <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+              <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="product">
+              <img src="../img/product-10-1.jpg" id="img1" width="300px">
+              <img src="../img/product-10-2.jpg" id="img2" width="300px">
+              </div>
+              <div class="card-details">
+                <p class="procap8">Clothing</p>
+                <h5 class="procap82">Coloful Pattern Shirts</h5>
+                <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+                <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="product">
+                <img src="../img/product-11-1.jpg" id="img1" width="300px">
+                <img src="../img/product-11-2.jpg" id="img2" width="300px">
+                </div>
+                <div class="card-details">
+                  <p class="procap8">Clothing</p>
+                  <h5 class="procap82">Coloful Pattern Shirts</h5>
+                  <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+                  <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="product">
+                  <img src="../img/product-9-1.jpg" id="img1" width="300px">
+                  <img src="../img/product-9-2.jpg" id="img2" width="300px">
+                  </div>
+                  <div class="card-details">
+                    <p class="procap8">Clothing</p>
+                    <h5 class="procap82">Coloful Pattern Shirts</h5>
+                    <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+                    <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="product">
+                    <img src="../img/product-12-1.jpg" id="img1" width="300px">
+                    <img src="../img/product-12-2.jpg" id="img2" width="300px">
+                    </div>
+                    <div class="card-details">
+                      <p class="procap8">Clothing</p>
+                      <h5 class="procap82">Coloful Pattern Shirts</h5>
+                      <p style="color: gold; font-size: 20px; font-weight: bold;">✩✩✩✩✩</p>
+                      <p class="price">$238.85<span class="offprz"> $245.8</span></p>
+                    </div>
+                  </div>
+        </section>
+
+
+        <!-- Footers -->
+        <section>
+          <nav class="footer navbar">
+            <div class="container-fluid">
+              <a class="navbar-brand"><img class="emaimg" src="../img/icon-email.svg" height="33px" width="33px"></a>
+              <p class="foot1">Sign in to Newsletter</p>
+              <span class="foot2">...and receive $25 coupon for first shopping.</span>
+              <form class="d-flex" role="search">
+                <input class="emailbox form-control" type="search" placeholder="Enter Your Email" aria-label="Search">
+                <button class="subbox btn" type="submit">Subscribe</button>
+              </form>
+            </div>
+          </nav>
+        </section>
+        <section class="footerpart">
+          <img class="footimg" src="../img/logo.png" height="60px" width="180px">
+          <p class="foot6">Contact</p><br>
+          <p class="foot5"><span class="foot4">Address: </span>13 Tlemcen Road, Street 32, Beb-Wahren<br>
+            <span class="foot4">Phone:</span> +012222 365/(+91)01 2345 6789<br>
+            <span class="foot4">Hours:</span> 10:00-18:00, Mon-Sat</p>
+            <p class="foot7">Follow Me</p>
+            <div class="footicons">
+              <img src="../img/icon-facebook.svg" height="20px" width="20px">
+              <img src="../img/icon-twitter.svg" height="20px" width="20px">
+              <img src="../img/icon-instagram.svg" height="20px" width="20px">
+              <img src="../img/icon-pinterest.svg" height="20px" width="20px">
+              <img src="../img/icon-youtube.svg" height="20px" width="20px">
+            </div>
+            <div class="footset">
+              <h5>Address</h5>
+              <p class="footset1">About Us</p>
+              <p>Delivery Information</p>
+              <p>Privacy Policy</p>
+              <p>Terms & Conditions</p>
+              <p>Contact Us</p>
+              <p>Support Centre</p>
+            </div>
+            <div class="footset2">
+              <h5>My Account</h5>
+              <p class="footset1">Sign in</p>
+              <p>View Cart</p>
+              <p>My Wishlist</p>
+              <p>Track My Order</p>
+              <p>Help</p>
+              <p>Order</p>
+            </div>
+            <div class="footpay">
+              <h5>Secured Payed Gateways</h5>
+              <img src="../img/payment-method.png">
+            </div>
+        </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
