--- a/code/compare.html
+++ b/code/compare.html
@@ -201,6 +201,25 @@
         <img src="../img/payment-method.png">
       </div>
   </section>
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+
+    
+    <div class="copyright">
+      <div class="logo" >
+        <hr style="width:1350px;">
+       <p>&copy; 2024 Shanu,All right reserved<span id="design">Designer by Shanu</span> </p>
+     </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+  </body>
 </html>
