--- a/code/index.html
+++ b/code/index.html
@@ -22,7 +22,7 @@
       <div class="tags collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link  p-4" href="./index.html">Home</a>
+            <a style="color: teal;" class="nav-link  p-4" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link  p-4" href="./shop.html">Shop</a>
@@ -34,7 +34,7 @@
             <a class="nav-link  p-4" href="./compare.html">Compare</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-4" href="./loginpage.html">Login</a>
+            <a class="nav-link p-4" href="./login.html">Login</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
