--- a/code/login.html
+++ b/code/login.html
@@ -30,7 +30,7 @@
             <a class="nav-link  p-4" href="./compare.html">Compare</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active p-4" aria-current="page" href="./loginpage.html">Login</a>
+            <a style="color: teal;" class="nav-link p-4" href="./login.html">Login</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -128,5 +128,15 @@
       </div>
   </section>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+   <div class="copyright">
+    <div class="logo" >
+      <hr style="width:1350px;">
+     <p>&copy; 2024 Shanu,All right reserved<span id="design">Designer by Shanu</span> </p>
+   </div>
+    </div>
+
+
 </body>
 </html>
