--- a/code/shop.html
+++ b/code/shop.html
@@ -20,10 +20,10 @@
         <div class="tags collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link  p-4"  href="./home.html">Home</a>
+              <a class="nav-link  p-4"  href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  p-4"  href="./shoppage.html">Shop</a>
+              <a style="color: teal;" class="nav-link  p-4"  href="./shop.html">Shop</a>
             </li>
             <li class="nav-item">
               <a class="nav-link  p-4"  href="./myaccount.html">My Account</a>
@@ -32,7 +32,7 @@
               <a class="nav-link  p-4"  href="./compare.html">Compare</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active p-4" aria-current="page" href="./loginpage.html">Login</a>
+              <a class="nav-link p-4"  href="./login.html">Login</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -61,6 +61,7 @@
           <span class="login navbar-brand mb-0 h1">Home > Shop</span>
         </div>
         </nav>
+        <p class="items-found" style="color: gray;">We found <span style="color: teal; font-weight: 500;">688</span> items for you!</p>
 
         <!-- Main Section -->
          <!-- Cards -->
@@ -476,7 +477,7 @@
            </section>
            <section>
             <div class="pagination">
-            <a href="#" class="active">1</a>
+            <a href="#" class="active1" style="color: white;">1</a>
             <a href="#">2</a>
             <a href="#">3</a>
             <a href="#">...</a>
@@ -537,5 +538,14 @@
             </div>
         </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+
+        <div class="copyright">
+          <div class="logo" >
+            <hr style="width:1350px;">
+           <p>&copy; 2024 Shanu,All right reserved<span id="design">Designer by Shanu</span> </p>
+         </div>
+          </div>
 </body>
 </html>
